--- a/mainapp/templates/mainapp/base.html
+++ b/mainapp/templates/mainapp/base.html
@@ -26,8 +26,9 @@
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page"
-                           href="{% url 'mainapp:subject_list' %}">Магазин</a>
+                           href="{% url 'shop:subject_list' %}">Магазин</a>
                     </li>
+
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'mainapp:create_product' %}">Создать предмет (помощь)</a>
                     </li>
