--- a/mainapp/templates/mainapp/my_main.html
+++ b/mainapp/templates/mainapp/my_main.html
@@ -4,7 +4,7 @@
 {% load my_tags %}
     <div class="block-home-banner">
         <div class="container text-light" id="text_center">
-            <h1 class="display-3">Выживалово</h1>
+            <h1 class="display-3">Барония</h1>
             <text class="h3">Такого выживания вы не видели<br>
                 даже во сне!
             </text>
@@ -13,18 +13,27 @@
 
     <div id="center">
         <div class="container py-4" data-bs-theme="dark">
-            <div class="row ">
-                {% for product in object_list %}
-                <div class="col-4">
-                    <div class="card mb-4" style="width: 18rem;">
-                        <img src="{{ product.image | my_media }}" class="card-img-top" alt="red_stoune">
-                        <div class="card-body ">
-                            <p class="card-text">{{ product.description }}</p>
-                        </div>
-                    </div>
+            <div class="row text-center">
+        {% for object in object_list %}
+        <div class="col">
+            <div class="card mb-4 box-shadow">
+                <div class="card-header">
+                    <h4 class="my-0 font-weight-normal">{{ object.name }} {{ object.slag }}</h4>
                 </div>
-                {% endfor %}
+                <div class="card-body">
+                    <h1 class="card-title pricing-card-title">$ {{ object.price }}</h1>
+                    <img src="{{ object.image | my_media }}" class="img-thumbnail">
+
+                    <p>{{ object.description | truncatechars:100}}</p>
+                    <a class="p-2 btn btn-outline-primary" href="">Обновить</a>
+
+                    <a class="p-2 btn btn-outline-primary"
+                       href="">Детали</a>
+                </div>
             </div>
+        </div>
+        {% endfor %}
+    </div>
         </div>
     </div>
 {% endblock %}
