--- a/mainapp/templates/mainapp/base.html
+++ b/mainapp/templates/mainapp/base.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>Сервер Баровия</title>
 
     <link rel="stylesheet" href="{% static 'mainapp/css/one_css.css' %}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -33,7 +33,7 @@
                         <a class="nav-link" href="{% url 'mainapp:create_product' %}">Создать предмет (помощь)</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link" href="{% url 'mainapp:index' %}">Проверочная страница (форум)</a>
+                        <a class="nav-link" href="{% url 'mainapp:email' %}">Проверочная страница (форум)</a>
                     </li>
                 </ul>
                 <form class="d-flex" role="search">
@@ -54,55 +54,37 @@
                 <div class="col-lg-3 mb-3">
                     <a class="d-inline-flex align-items-center mb-2 text-decoration-none" href="/"
                        aria-label="Bootstrap">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="40" height="32" class="d-block me-2"
-                             viewBox="0 0 118 94" role="img"><title>Bootstrap</title>
-                            <path fill-rule="evenodd" clip-rule="evenodd"
-                                  d="M24.509 0c-6.733 0-11.715 5.893-11.492 12.284.214 6.14-.064 14.092-2.066 20.577C8.943 39.365 5.547 43.485 0 44.014v5.972c5.547.529 8.943 4.649 10.951 11.153 2.002 6.485 2.28 14.437 2.066 20.577C12.794 88.106 17.776 94 24.51 94H93.5c6.733 0 11.714-5.893 11.491-12.284-.214-6.14.064-14.092 2.066-20.577 2.009-6.504 5.396-10.624 10.943-11.153v-5.972c-5.547-.529-8.934-4.649-10.943-11.153-2.002-6.484-2.28-14.437-2.066-20.577C105.214 5.894 100.233 0 93.5 0H24.508zM80 57.863C80 66.663 73.436 72 62.543 72H44a2 2 0 01-2-2V24a2 2 0 012-2h18.437c9.083 0 15.044 4.92 15.044 12.474 0 5.302-4.01 10.049-9.119 10.88v.277C75.317 46.394 80 51.21 80 57.863zM60.521 28.34H49.948v14.934h8.905c6.884 0 10.68-2.772 10.68-7.727 0-4.643-3.264-7.207-9.012-7.207zM49.948 49.2v16.458H60.91c7.167 0 10.964-2.876 10.964-8.281 0-5.406-3.903-8.178-11.425-8.178H49.948z"
-                                  fill="currentColor"></path>
-                        </svg>
-                        <span class="fs-5 text-white">Bootstrap</span>
+                        <span class="fs-5 text-white">Баровия</span>
                     </a>
                     <ul class="list-unstyled small">
-                        <li class="mb-2">Designed and built with all the love in the world by the <a
-                                href="/docs/5.3/about/team/">Bootstrap team</a> with the help of
+                        <li class="mb-2">Ваш любимый сервер майнкрафта <a
+                                href="/docs/5.3/about/team/">Баровия</a>
                         </li>
                     </ul>
                 </div>
                 <div class="col-6 col-lg-2 offset-lg-1 mb-3">
-                    <h5 class="text-white">Links</h5>
+                    <h5 class="text-white">Ссылки</h5>
                     <ul class="list-unstyled">
-                        <li class="mb-2"><a href="/">Home</a></li>
-                        <li class="mb-2"><a href="/docs/5.3/">Docs</a></li>
-                        <li class="mb-2"><a href="/docs/5.3/examples/">Examples</a></li>
-                        <li class="mb-2"><a href="https://icons.getbootstrap.com/">Icons</a></li>
-                    </ul>
+                        <li class="mb-2"><a href="/">Главная</a></li>
+                        <li class="mb-2"><a href="/docs/5.3/">Магазин</a></li>
+                        <li class="mb-2"><a href="/docs/5.3/examples/">Вопросы</a></li>
+
                 </div>
                 <div class="col-6 col-lg-2 mb-3">
-                    <h5 class="text-white">Guides</h5>
+                    <h5 class="text-white">Помощь</h5>
                     <ul class="list-unstyled">
-                        <li class="mb-2"><a href="/docs/5.3/getting-started/">Getting started</a>
+                        <li class="mb-2"><a href="/docs/5.3/examples/starter-template/">Регистрация</a></li>
+
+                        <li class="mb-2"><a href="/docs/5.3/getting-started/webpack/">Каталог вопросов</a>
                         </li>
-                        <li class="mb-2"><a href="/docs/5.3/examples/starter-template/">Starter
-                            template</a></li>
-                        <li class="mb-2"><a href="/docs/5.3/getting-started/webpack/">Webpack</a>
-                        </li>
-                        <li class="mb-2"><a href="/docs/5.3/getting-started/parcel/">Parcel</a></li>
-                    </ul>
+
                 </div>
                 <div class="col-6 col-lg-2 mb-3">
-                    <h5 class="text-white">Projects</h5>
+                    <h5 class="text-white">Проекты</h5>
                     <ul class="list-unstyled">
                         <li class="mb-2"><a href="https://github.com/twbs/bootstrap" target="_blank"
-                                            rel="noopener">Bootstrap
+                                            rel="noopener">Баровия
                             5</a></li>
-                        <li class="mb-2"><a href="https://github.com/twbs/bootstrap/tree/v4-dev"
-                                            target="_blank"
-                                            rel="noopener">Bootstrap 4</a></li>
-                        <li class="mb-2"><a href="https://github.com/twbs/icons" target="_blank"
-                                            rel="noopener">Icons</a></li>
-                        <li class="mb-2"><a href="https://github.com/twbs/rfs" target="_blank"
-                                            rel="noopener">RFS</a>
-                        </li>
 
                     </ul>
                 </div>
